infra/elasticsearch/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  namespace: monitoring
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
    - name: http
      protocol: TCP
      port: 5601
      targetPort: 5601
  type: ClusterIP
